remove unnecessary style; fix spacing in tavern message

--- a/public/css/alerts.styl
+++ b/public/css/alerts.styl
@@ -1,12 +1,3 @@
-.community-guidelines
-  position: fixed
-  text-align: center
-  top: 0
-  left: 0
-  width: 100%
-  height: 0
-  z-index: 1010
-
 .new-stuff
   position: fixed
   text-align: center
